use static files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 <nav class="topnav">
   <a routerLink="/home" routerLinkActive="active" >Home</a>
   <a routerLink="/specifications" routerLinkActive="active" >API Specifications</a>
+  <a href="assets/swagger/index.html" target="_blank">Static API</a>
 </nav>
 
 <router-outlet></router-outlet>
