--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,7 @@
 
 <nav class="topnav">
   <a routerLink="/home" routerLinkActive="active" >Home</a>
-  <a routerLink="/specifications" routerLinkActive="active" >API Specifications</a>
-  <a href="assets/swagger/index.html" target="_blank">Static API</a>
+  <a href="assets/swagger/index.html" target="_blank">API Specifications</a>
 </nav>
 
 <router-outlet></router-outlet>
